apps/influxdb/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  namespace: influxdb
spec:
  serviceName: influxdb
  replicas: 1
  selector:
    matchLabels: { app: influxdb }
  template:
    metadata:
      labels: { app: influxdb }
    spec:
      nodeSelector:
        node-role.do/amd-work: "true"
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: influxdb
          image: influxdb:2.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8086
          volumeMounts:
            - name: data
              mountPath: /var/lib/influxdb2
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              memory: 2Gi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 20Gi
