apps/influxdb/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influxdb
spec:
  type: ClusterIP
  selector:
    app: influxdb
  ports:
    - name: http
      port: 8086
      targetPort: 8086
